fix: Missing padding on project pages + bad header color on app page

--- a/styles/main.css
+++ b/styles/main.css
@@ -17,7 +17,7 @@ body {
 	}
 
 	h2.section-header {
-		@apply pt-6 pb-2 text-4xl text-black dark:text-gray-400;
+		@apply pt-6 pb-2 text-4xl;
 	}
 }
 
